--- a/src/main/site/cv.css
+++ b/src/main/site/cv.css
@@ -1,3 +1,4 @@
+body {color: #000000; font-family: "Verdana", "Arial", "Helvetica", sans-serif; font-size: 0.8em;}
 p {line-height:148%}
 div {line-height:148%}
 li { margin-bottom:1em!important; }
